<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp"
            android:layout_gravity="center|bottom"
            android:scaleType="fitXY"
            android:src="@drawable/user" />

    </FrameLayout>

    <TextView
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/nama_"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullname"
        android:layout_marginLeft="@dimen/_40dp"
        android:text="@string/aisyah" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/profile_name"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/fullemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/email_"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullemail"
        android:layout_marginLeft="@dimen/_40dp"
        android:text="@string/gmail" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/profile_email"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/fullhp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="hp :"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/profile_hp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullhp"
        android:layout_marginLeft="@dimen/_40dp"
        android:text="0899" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/profile_hp"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/profile_signout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_below="@id/view3"
        android:text="Sign Out"
        android:textAllCaps="false"
        android:layout_marginLeft="@dimen/_40dp"
        android:layout_marginRight="@dimen/_40dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"/>

</RelativeLayout>